kubernetes/komga/komga/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: komga
spec:
  selector:
    app.kubernetes.io/name: komga
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: komga
    protocol: TCP
    port: 25600
    targetPort: 25600
