kubernetes/komga/komga/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: komga
  annotations:
    external-dns.alpha.kubernetes.io/hostname: komga.slfhst.io
    external-dns.alpha.kubernetes.io/target: slfhst.io
    cert-manager.io/cluster-issuer: cluster-issuer
spec:
  tls:
  - hosts:
    - komga.slfhst.io
    secretName: komga-cert-prod
  rules:
  - host: komga.slfhst.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: komga
            port:
              number: 25600
